removed dependency on maven-invoker and added dependency on commons-exec